--- a/04.html
+++ b/04.html
@@ -305,6 +305,9 @@
 					<a href="index.html" id="btnPrev" class="btn btn-primary btn-lg" style="display:scroll;position:fixed;bottom:60%;right: 0px;">
 					Anterior
 					</a>    
+					<button id="btnFin" class="btn btn-primary btn-lg" style="display:scroll;position:fixed;bottom:40%;right: 0px;">
+						Finalizar intento
+					</button>
 				</div>
 			</div>
 			
