--- a/prueba.html
+++ b/prueba.html
@@ -8,10 +8,20 @@
 
 <!--<script type="text/javascript" src="scripts/script_subitus.js"></script>-->
 <script type="text/javascript">
-	localStorage.setItem("cuenta", 1);
-	var n = localStorage.getItem("cuenta");
-	var suma = 12 + parseInt(n);
-	console.log(suma);
-</script>
+	// localStorage.setItem("cuenta", 1);
+	// var n = localStorage.getItem("cuenta");
+	// var suma = 12 + parseInt(n);
+	// console.log(suma);
+	var total = 15;
+	var nuevoNombre = "intento1";
+	// document.write(nuevoNombre.substring(0, 7) + "//"); // intento
+	// document.write(nuevoNombre.substring(7)); // 7
+	while(localStorage.getItem(nuevoNombre) != null){
+		nuevoNombre = nuevoNombre.substring(0, 7) + (parseInt( nuevoNombre.substring(7)) + 1);
+		console.log(nuevoNombre);
+	}
+	localStorage.setItem(nuevoNombre, "1");
+	document.write("Se ha creado " + nuevoNombre);
+	</script>
 </body>
 </html>
