--- a/prueba.html
+++ b/prueba.html
@@ -16,6 +16,7 @@
 	var nuevoNombre = "intento1";
 	// document.write(nuevoNombre.substring(0, 7) + "//"); // intento
 	// document.write(nuevoNombre.substring(7)); // 7
+	// Comentario de prueba
 	while(localStorage.getItem(nuevoNombre) != null){
 		nuevoNombre = nuevoNombre.substring(0, 7) + (parseInt( nuevoNombre.substring(7)) + 1);
 		console.log(nuevoNombre);
