--- a/ver_avance.html
+++ b/ver_avance.html
@@ -13,7 +13,7 @@
 		</div>
 		</div>
 	</div>
-	
+	<a href="prueba.html">Prueba</a>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <script src="scripts/config.js"></script>
