Se comprimen los datos con lzw, tanto en localStorage, como en la API

--- a/05.html
+++ b/05.html
@@ -287,17 +287,19 @@
 				</header>
 				<!-- end: TOP NAVBAR -->
 				<div class="main-content">
-					<center><h1>Quinta Página</h1></center>
+					<div id="contenidoCurso">
+						<center><h1>Quinta Página</h1></center>
+						<a href="index.html" id="btnNext" class="btn btn-primary btn-lg" style="display:scroll;position:fixed;bottom:50%;right:0px;">
+						Siguiente
+						</a>
+						<a href="index.html" id="btnPrev" class="btn btn-primary btn-lg" style="display:scroll;position:fixed;bottom:60%;right: 0px;">
+						Anterior
+						</a>
+						<button id="btnFin" class="btn btn-primary btn-lg" style="display:scroll;position:fixed;bottom:40%;right: 0px;">
+							Salir
+						</button>
+					</div>
 					<div id="contenedor"><div id="contenido"></div></div>
-					<a href="index.html" id="btnNext" class="btn btn-primary btn-lg" style="display:scroll;position:fixed;bottom:50%;right:0px;">
-				    Siguiente
-					</a>
-					<a href="index.html" id="btnPrev" class="btn btn-primary btn-lg" style="display:scroll;position:fixed;bottom:60%;right: 0px;">
-					Anterior
-					</a>
-					<button id="btnFin" class="btn btn-primary btn-lg" style="display:scroll;position:fixed;bottom:40%;right: 0px;">
-						Finalizar intento
-					</button>
 				</div>
 			</div>
 			
