Commit antes de la aplicación de la plantilla

--- a/07.html
+++ b/07.html
@@ -312,7 +312,7 @@
 						<h4 class="modal-title">Avance del curso</h4>
 					</div>
 					<div class="modal-body">
-						<div id="contenedor"><div id="contenido"></div></div>
+						<div id="contenedor"><div id="contenido"></div><div id="avance"></div></div>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
