--- a/02.html
+++ b/02.html
@@ -313,7 +313,7 @@
 						<h4 class="modal-title">Avance del curso</h4>
 					</div>
 					<div class="modal-body">
-						<div id="contenedor"><div id="contenido"></div></div>
+						<div id="contenedor"><div id="contenido"></div><div id="avance"></div></div>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -352,7 +352,6 @@
 		<!-- start: JavaScript Event Handlers for this page -->
 		<script src="assets/js/index.js"></script>
 		<script>
-			$("#contenido").hide();
 			jQuery(document).ready(function() {
 				Main.init();
 				Index.init();
