--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	</head>
 	<!-- end: HEAD -->
 	<body onLoad="init()" onUnload="end()">
+		<script src="scripts/config.js"></script>
 		<script src="scripts/template.js"></script>
 	</body>
 </html>
