--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 							</ul>
 						</li>
 						<li>
-							<a class="btnFin">
+							<a class="btnFin" data-toggle="tooltip" title="Cerrar curso" data-placement="bottom" data-toggle="tooltip" title="Cerrar curso" data-placement="bottom">
 							<div class="item-content">
 								<div class="item-media">
 									<div class="lettericon" data-text="Salir" data-size="sm" data-char-count="2"></div>
@@ -161,88 +161,6 @@
 								</div>
 							</div> </a>
 						</li>
-						<!--<li>
-							<a href="javascript:void(0)">
-							<div class="item-content">
-								<div class="item-media">
-									<div class="lettericon" data-text="Salir" data-size="sm" data-char-count="2"></div>
-								</div>
-								<div class="item-inner">
-									<span class="title"> Salir </span><i class="icon-arrow"></i>
-								</div>
-							</div> </a>
-							<a class="btnFin">
-							<div class="item-content">
-								<div class="item-inner" id="enlace0">
-								<span class="title">Salir</span>
-								</div>
-							</div> </a>
-						</li>-->
-						<!--<li>
-							<a href="02.html">
-							<div class="item-content">
-								<div class="item-inner" id="enlace1">
-								<span class="title">Moodle</span>
-								</div>
-							</div> </a>
-						</li><li>
-							<a href="03.html">
-							<div class="item-content">
-								<div class="item-inner" id="enlace2">
-								<span class="title">App Tincan</span>
-								</div>
-							</div> </a>
-						</li><li>
-							<a href="04.html">
-							<div class="item-content">
-								<div class="item-inner" id="enlace3">
-								<span class="title">Aviso de privacidad</span>
-								</div>
-							</div> </a>
-						</li><li>
-							<a href="05.html">
-							<div class="item-content">
-								<div class="item-inner" id="enlace4">
-								<span class="title">Blog</span>
-								</div>
-							</div> </a>
-						</li><li>
-							<a href="06.html">
-							<div class="item-content">
-								<div class="item-inner" id="enlace5">
-								<span class="title">Chamillo</span>
-								</div>
-							</div> </a>
-						</li><li>
-							<a href="07.html">
-							<div class="item-content">
-								<div class="item-inner" id="enlace6">
-								<span class="title">Contacto</span>
-								</div>
-							</div> </a>
-						</li><li>
-							<a href="08.html">
-							<div class="item-content">
-								<div class="item-inner" id="enlace7">
-								<span class="title">Detalle de post</span>
-								</div>
-							</div> </a>
-						</li><li>
-							<a href="09.html">
-							<div class="item-content">
-								<div class="item-inner" id="enlace8">
-								<span class="title">E-learning</span>
-								</div>
-							</div> </a>
-						</li>
-						<li>
-							<a class='btnFin'>
-							<div class="item-content">
-								<div class="item-inner">
-									<span class="title">Salir</span>
-								</div>
-							</div> </a>
-						</li>-->
 					</ul>
                     <!-- end: MAIN NAVIGATION MENU -->
                 </nav>
@@ -259,14 +177,17 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html"> <img src="assets/images/subitus.png" alt="Packet"/> </a>
-                <a class="navbar-brand navbar-brand-collapsed" href="index.html"> <img src="assets/images/subitus_small.png" alt="" /> </a>
-                <button type="button" data-toggle="modal" class="btn pull-right menu-toggler visible-xs-block" id="menu-toggler"  data-target="#myModal">
-                        <i class="glyphicon glyphicon-stats"></i>
-                        
+				<a class="navbar-brand navbar-brand-collapsed" href="index.html"> <img src="assets/images/subitus_small.png" alt="" /> </a>
+				<button class="pull-right menu-toggler visible-xs-block btnFin">
+					<img src="assets/images/salir.png" data-toggle="tooltip" title="Salir del curso" data-placement="bottom">
+				</button>
+                <button type="button" data-toggle="modal" class="btn pull-right menu-toggler visible-xs-block" id="menu-toggler" data-target="#myModal">
+                    <i class="glyphicon glyphicon-stats" data-toggle="tooltip" title="Ver avance del curso" data-placement="bottom"></i>
                 </button>
                 <button class="hidden-md hidden-lg btnBookmark" >
-                    <i class="glyphicon glyphicon-bookmark"></i>
-                </button>
+                    <i class="glyphicon glyphicon-bookmark" data-toggle="tooltip" title="Marcar página" data-placement="bottom"></i>
+				</button>
+
             </div>
             <!-- end: NAVBAR HEADER -->
             <!-- start: NAVBAR COLLAPSE -->
@@ -291,13 +212,16 @@
                 <ul class="nav navbar-right">
                     <!-- start: MESSAGES DROPDOWN -->
                     <li >
-                        <a><button type="button" class="btnBookmark"><i class="glyphicon glyphicon-bookmark"></i></button></a>
+                        <a><button type="button" class="btnBookmark"><i class="glyphicon glyphicon-bookmark" data-toggle="tooltip" title="Marcar página" data-placement="bottom"></i></button></a>
                     </li>
                     <!-- end: MESSAGES DROPDOWN -->
                     <!-- start: ACTIVITIES DROPDOWN -->
                     <li class="dropdown">
-                        <a><button type="button" data-toggle="modal" data-target="#myModal"><i class="glyphicon glyphicon-stats"></i></button></a>
-                    </li>
+                        <a><button type="button" data-toggle="modal" data-target="#myModal"><i data-toggle="tooltip" title="Ver avance del curso" data-placement="bottom" class="glyphicon glyphicon-stats"></i></button></a>
+					</li>
+					<li class="dropdown">
+						<a><button class="btnFin"><img src="assets/images/salir.png" data-toggle="tooltip" title="Salir del curso" data-placement="bottom"></button></a>
+					</li>
                     <!-- end: ACTIVITIES DROPDOWN -->
                     
                 </ul>
