Modificaciones en template.js

--- a/02.html
+++ b/02.html
@@ -47,5 +47,6 @@
 	<body onLoad="init()" onUnload="end()">
 		<script src="scripts/config.js"></script>
 		<script src="scripts/template.js"></script>
+		<script type="text/javascript" src="scripts/script_subitus.js"></script>
 	</body>
 </html>
