--- a/02.html
+++ b/02.html
@@ -18,7 +18,7 @@
 		<meta content="" name="author" />
 		<!-- end: META -->
 		<!-- start: GOOGLE FONTS -->
-		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
+		<link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
 		<!-- end: GOOGLE FONTS -->
 		<!-- start: MAIN CSS -->
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -47,6 +47,5 @@
 	<body onLoad="init()" onUnload="end()">
 		<script src="scripts/config.js"></script>
 		<script src="scripts/template.js"></script>
-		<script type="text/javascript" src="scripts/script_subitus.js"></script>
 	</body>
 </html>
