--- a/datatables.html
+++ b/datatables.html
@@ -486,7 +486,7 @@
             </tr>
         </tfoot>
     </table>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
