--- a/prueba.html
+++ b/prueba.html
@@ -8,242 +8,8 @@
 
 <!--<script type="text/javascript" src="scripts/script_subitus.js"></script>-->
 <script type="text/javascript">
-	// localStorage.setItem("cuenta", 1);
-	// var n = localStorage.getItem("cuenta");
-	// var suma = 12 + parseInt(n);
-	// console.log(suma);
-	// var total = 15;
-	// var nuevoNombre = "intento1";
-	// document.write(nuevoNombre.substring(0, 7) + "//"); // intento
-	// document.write(nuevoNombre.substring(7)); // 7
-	// Comentario de prueba
-	// while(localStorage.getItem(nuevoNombre) != null){
-	// 	nuevoNombre = nuevoNombre.substring(0, 7) + (parseInt( nuevoNombre.substring(7)) + 1);
-	// 	console.log(nuevoNombre);
-	// }
-	// localStorage.setItem(nuevoNombre, "1");
-	// document.write("Se ha creado " + nuevoNombre);
-	// function localStorageSpace(){
-    //     var allStrings = '';
-    //     for(var key in window.localStorage){
-    //         if(window.localStorage.hasOwnProperty(key)){
-    //             allStrings += window.localStorage[key];
-    //         }
-    //     }
-    //     return allStrings ? 3 + ((allStrings.length*16)/(8*1024)) + ' KB' : 'Empty (0 KB)';
-    // }
-	// document.write(localStorageSpace());
-	// var paginaAnterior = document.referrer;
-	// paginaAnterior = paginaAnterior.substring(paginaAnterior.lastIndexOf('/') + 1);
-	// document.write("<br>La página anterior es: " + paginaAnterior);
-	/*var Base64 = {
-
-		// private property
-		_keyStr : "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",
-
-		// public method for encoding
-		encode : function (input) {
-			var output = "";
-			var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
-			var i = 0;
-
-			input = Base64._utf8_encode(input);
-
-			while (i < input.length) {
-
-				chr1 = input.charCodeAt(i++);
-				chr2 = input.charCodeAt(i++);
-				chr3 = input.charCodeAt(i++);
-
-				enc1 = chr1 >> 2;
-				enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
-				enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
-				enc4 = chr3 & 63;
-
-				if (isNaN(chr2)) {
-					enc3 = enc4 = 64;
-				} else if (isNaN(chr3)) {
-					enc4 = 64;
-				}
-
-				output = output +
-				this._keyStr.charAt(enc1) + this._keyStr.charAt(enc2) +
-				this._keyStr.charAt(enc3) + this._keyStr.charAt(enc4);
-
-			}
-
-			return output;
-		},
-
-		// public method for decoding
-		decode : function (input) {
-			var output = "";
-			var chr1, chr2, chr3;
-			var enc1, enc2, enc3, enc4;
-			var i = 0;
-
-			input = input.replace(/[^A-Za-z0-9\+\/\=]/g, "");
-
-			while (i < input.length) {
-
-				enc1 = this._keyStr.indexOf(input.charAt(i++));
-				enc2 = this._keyStr.indexOf(input.charAt(i++));
-				enc3 = this._keyStr.indexOf(input.charAt(i++));
-				enc4 = this._keyStr.indexOf(input.charAt(i++));
-
-				chr1 = (enc1 << 2) | (enc2 >> 4);
-				chr2 = ((enc2 & 15) << 4) | (enc3 >> 2);
-				chr3 = ((enc3 & 3) << 6) | enc4;
-
-				output = output + String.fromCharCode(chr1);
-
-				if (enc3 != 64) {
-					output = output + String.fromCharCode(chr2);
-				}
-				if (enc4 != 64) {
-					output = output + String.fromCharCode(chr3);
-				}
-
-			}
-
-			output = Base64._utf8_decode(output);
-
-			return output;
-
-		},
-
-		// private method for UTF-8 encoding
-		_utf8_encode : function (string) {
-			string = string.replace(/\r\n/g,"\n");
-			var utftext = "";
-
-			for (var n = 0; n < string.length; n++) {
-
-				var c = string.charCodeAt(n);
-
-				if (c < 128) {
-					utftext += String.fromCharCode(c);
-				}
-				else if((c > 127) && (c < 2048)) {
-					utftext += String.fromCharCode((c >> 6) | 192);
-					utftext += String.fromCharCode((c & 63) | 128);
-				}
-				else {
-					utftext += String.fromCharCode((c >> 12) | 224);
-					utftext += String.fromCharCode(((c >> 6) & 63) | 128);
-					utftext += String.fromCharCode((c & 63) | 128);
-				}
-
-			}
-
-			return utftext;
-		},
-
-		// private method for UTF-8 decoding
-		_utf8_decode : function (utftext) {
-			var string = "";
-			var i = 0;
-			var c = c1 = c2 = 0;
-
-			while ( i < utftext.length ) {
-
-				c = utftext.charCodeAt(i);
-
-				if (c < 128) {
-					string += String.fromCharCode(c);
-					i++;
-				}
-				else if((c > 191) && (c < 224)) {
-					c2 = utftext.charCodeAt(i+1);
-					string += String.fromCharCode(((c & 31) << 6) | (c2 & 63));
-					i += 2;
-				}
-				else {
-					c2 = utftext.charCodeAt(i+1);
-					c3 = utftext.charCodeAt(i+2);
-					string += String.fromCharCode(((c & 15) << 12) | ((c2 & 63) << 6) | (c3 & 63));
-					i += 3;
-				}
-
-			}
-
-			return string;
-		}
-
-	}
-	// var cadena = Base64.encode('w00t');
-	// alert(cadena); // dzAwdA==
-	var cadena = Base64.decode('MDEwMzA0MTgxMzA3MTMwNzAyMDMwNDE4MTMwNzEzMDcwMzAzMDQxODEzMDcxMzA3MDQwMzA0MTgxMzA3MTMwNzA1MDMwNDE4MTMwNzEzMDcwNjAzMDQxODEzMDcxMzA4MDcwMzA0MTgxMzA4MTMwODA4MDMwNDE4MTMwODEzMDgwOTAzMDQxODEzMDgxMzA4');
-	alert(cadena); */
-
-	function lzw_encode(s) {
-		var dict = {};
-		var data = (s + "").split("");
-		var out = [];
-		var currChar;
-		var phrase = data[0];
-		var code = 256;
-		for (var i=1; i<data.length; i++) {
-			currChar=data[i];
-			if (dict[phrase + currChar] != null) {
-				phrase += currChar;
-			}
-			else {
-				out.push(phrase.length > 1 ? dict[phrase] : phrase.charCodeAt(0));
-				dict[phrase + currChar] = code;
-				code++;
-				phrase=currChar;
-			}
-		}
-		out.push(phrase.length > 1 ? dict[phrase] : phrase.charCodeAt(0));
-		for (var i=0; i<out.length; i++) {
-			out[i] = String.fromCharCode(out[i]);
-		}
-		return out.join("");
-	}
-
-	// Decompress an LZW-encoded string
-	function lzw_decode(s) {
-		var dict = {};
-		var data = (s + "").split("");
-		var currChar = data[0];
-		var oldPhrase = currChar;
-		var out = [currChar];
-		var code = 256;
-		var phrase;
-		for (var i=1; i<data.length; i++) {
-			var currCode = data[i].charCodeAt(0);
-			if (currCode < 256) {
-				phrase = data[i];
-			}
-			else {
-			phrase = dict[currCode] ? dict[currCode] : (oldPhrase + currChar);
-			}
-			out.push(phrase);
-			currChar = phrase.charAt(0);
-			dict[code] = oldPhrase + currChar;
-			code++;
-			oldPhrase = phrase;
-		}
-		return out.join("");
-	}
-	//var comprimido = lzw_encode("010304181307130702030418130713070303041813071307040304181307130705030418130713070603041813071308070304181308130808030418130813080903041813081308");
-	//alert(comprimido);
-	//document.write(lzw_encode("00010203040506070809101112131415161718192021222324252627282930313233343536373839404142434445464748495051525354555657585960616263646566676869707172737475767778798081828384858687888990919293949596979899"));
-	// for (let index = 0; index < 100; index++) {
-	// 	if (index<10) {
-	// 		document.write("0" + index.toString());
-	// 	}else{
-	// 		document.write(index);
-	// 	}	
-	// }
-	var l = "";
-	for (let index = 0; index < 150; index++) {
-		l += index;
-	}
-	let m = lzw_encode(l);
-	document.write(l + " (" + l.length + ", " + (l.length / 3) +") -->  " + m + " ("+ m.length + ")");
-	
-	</script>
+	var n = "123456";
+	alert(n.substring(0,2));
+</script>
 </body>
 </html>
