Avances en estructura, acordeón

--- a/03.html
+++ b/03.html
@@ -43,8 +43,12 @@
 		<link rel="shortcut icon" href="favicon.ico" />
 	</head>
 	<!-- end: HEAD -->
-	<body onLoad="init()" onUnload="end()">
+	<body onUnload="end()">
 		<script src="scripts/config.js"></script>
 		<script src="scripts/template.js"></script>
+<script>
+imprimirCabecera(); 
+imprimirPieDePagina();
+</script>
 	</body>
 </html>
