Mejoras en rendimiento de plantilla

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -13,6 +13,9 @@
 		<!-- end: META -->
 		<!-- start: GOOGLE FONTS -->
 		<link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
+        <script src="assets/alertify/alertify.min.js"></script>
+        <link rel="stylesheet" href="assets/alertify/css/alertify.min.css">
+        <link rel="stylesheet" href="assets/alertify/css/themes/default.min.css">
 		<!-- end: GOOGLE FONTS -->
 		<!-- start: MAIN CSS -->
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
