--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 		<meta content="" name="author" />
 		<!-- end: META -->
 		<!-- start: GOOGLE FONTS -->
-		<link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="assets/alertify/alertify.min.js"></script>
+        <link rel="stylesheet" href="assets/alertify/css/alertify.min.css">
+        <link rel="stylesheet" href="assets/alertify/css/themes/bootstrap.min.css">
 		<!-- end: GOOGLE FONTS -->
 		<!-- start: MAIN CSS -->
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -49,7 +53,6 @@
 			<div id="app-content" class="app-content"></div>
 		</div>
 		<div id="mymodal"></div>
-		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="scripts/config.js"></script>
 		<script src="scripts/template.js"></script>
 		<script>
