--- a/09.html
+++ b/09.html
@@ -7,7 +7,7 @@
 	<!--<![endif]-->
 	<!-- start: HEAD -->
 	<head>
-		<title>Novena página</title>
+		<title>Primera página</title>
 		<!-- start: META -->
 		<!--[if IE]><meta http-equiv='X-UA-Compatible' content="IE=edge,IE=9,IE=8,chrome=1" /><![endif]-->
 		<meta charset="utf-8" />
@@ -19,6 +19,9 @@
 		<!-- end: META -->
 		<!-- start: GOOGLE FONTS -->
 		<link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
+        <script src="assets/alertify/alertify.min.js"></script>
+        <link rel="stylesheet" href="assets/alertify/css/alertify.min.css">
+        <link rel="stylesheet" href="assets/alertify/css/themes/default.min.css">
 		<!-- end: GOOGLE FONTS -->
 		<!-- start: MAIN CSS -->
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -44,11 +47,54 @@
 	</head>
 	<!-- end: HEAD -->
 	<body onUnload="end()">
+		<div id="app">
+			<div id="sidebar" class="sidebar app-aside"></div>
+			<div id="app-content" class="app-content"></div>
+		</div>
+		<div id="mymodal"></div>
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="scripts/config.js"></script>
 		<script src="scripts/template.js"></script>
-<script>
-imprimirCabecera(); 
-imprimirPieDePagina();
-</script>
+		<script>
+			imprimirCabecera();
+			diapositiva = {
+				tipo: "accordion", // flip-card, accordion, horizontal-tabs, vertical-tabs
+				titulo: "Acordeón",
+				div: "contenidoCurso",
+				contenido: [
+					{
+						titulo: "Sección 1",
+						imagen: "",
+						posicionImagen: "", // derecha, izquierda, arriba, abajo
+						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+					},
+					{
+						titulo: "Sección 2",
+						imagen: "",
+						posicionImagen: "", // derecha, izquierda, arriba, abajo
+						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+					},
+					{
+						titulo: "Sección 3",
+						imagen: "",
+						posicionImagen: "", // derecha, izquierda, arriba, abajo
+						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+					},
+					{
+						titulo: "Sección 4",
+						imagen: "",
+						posicionImagen: "", // derecha, izquierda, arriba, abajo
+						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+					},
+					{
+						titulo: "Sección 5",
+						imagen: "",
+						posicionImagen: "", // derecha, izquierda, arriba, abajo
+						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+					},
+				],
+			};
+			imprimirPieDePagina();
+		</script>
 	</body>
 </html>
