Ajustes de vista de página

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
 				div: "contenidoCurso",
 				contenido: [
 					{
-						titulo: "Sección 1",
+						titulo: "Bicha",
 						imagen: "",
 						posicionImagen: "", // derecha, izquierda, arriba, abajo
-						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+						texto: "Este será el contenido 1 de bicha."
 					},
 					{
-						titulo: "Sección 2",
+						titulo: "Rino",
 						imagen: "",
 						posicionImagen: "", // derecha, izquierda, arriba, abajo
-						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+						texto: "Rino estuvo aquí."
 					},
 					{
-						titulo: "Sección 3",
+						titulo: "Oing",
 						imagen: "",
 						posicionImagen: "", // derecha, izquierda, arriba, abajo
-						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+						texto: "Oing es el más fuerte."
 					},
 					{
 						titulo: "Sección 4",
