Ajustes de seguimiento de gráficas

--- a/lzw.html
+++ b/lzw.html
@@ -14,13 +14,11 @@
             <div class="card-header">
                 LZW
             </div>
-            <div class="card-body">
-                <center>
+            <div class="card-body" style="text-align: center">
                     <input type="text" name="entrada" size="52" id="entrada"><br><br>
                     <button id="codificar">Codificar</button>
                     <button id="decodificar">Decodificar</button><br><br>
                     <input type="text" size="52" placeholder="Resultado" id="resultado"><br>
-                </center>
             </div>
         </div>
     </div>
