--- a/estadisticas.html
+++ b/estadisticas.html
@@ -282,7 +282,7 @@
             <div class="col-md-12">
             <canvas id="myChart" height="0" class="chartjs-render-monitor" width="0" style="display: block; width: 0px; height: 0px;"></canvas>
             </div>
-        </div><center></center></div></div>
+        </div></div></div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
