Indentación de archivos

--- a/04.html
+++ b/04.html
@@ -58,7 +58,7 @@
 		<script>
 			imprimirCabecera();
 			diapositiva = {
-				tipo: "accordion", // flip-card, accordion, horizontal-tabs, vertical-tabs
+				tipo: "accordion__", // flip-card, accordion, horizontal-tabs, vertical-tabs
 				titulo: "Acordeón",
 				div: "contenidoCurso",
 				contenido: [
