--- a/pTemplate.html
+++ b/pTemplate.html
@@ -16,6 +16,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta content="" name="description" />
 		<meta content="" name="author" />
+        <link rel="stylesheet" href="assets/css/estilo_subitus.css">
 		<!-- end: META -->
 		<!-- start: GOOGLE FONTS -->
 		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
