--- a/04.html
+++ b/04.html
@@ -16,6 +16,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta content="" name="description" />
 		<meta content="" name="author" />
+        <link rel="stylesheet" href="assets/css/estilo_subitus.css">
 		<!-- end: META -->
 		<!-- start: GOOGLE FONTS -->
 		<link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
@@ -63,33 +64,43 @@
 				div: "contenidoCurso",
 				contenido: [
 					{
-						titulo: "Sección 1",
-						imagen: "",
-						posicionImagen: "", // derecha, izquierda, arriba, abajo
-						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+						titulo: "Bicha",
+						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
+                        posicionImagen: "derecha", // derecha, izquierda, arriba, abajo
+                        // alto: 2,
+                        // ancho: 2,
+						texto: "Este será el contenido 1 de bicha."
 					},
 					{
-						titulo: "Sección 2",
-						imagen: "",
-						posicionImagen: "", // derecha, izquierda, arriba, abajo
-						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+						titulo: "Rino",
+						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
+                        posicionImagen: "izquierda", // derecha, izquierda, arriba, abajo
+                        // alto: 2,
+                        // ancho: 2,
+						texto: "Rino estuvo aquí."
 					},
 					{
-						titulo: "Sección 3",
-						imagen: "",
-						posicionImagen: "", // derecha, izquierda, arriba, abajo
-						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+						titulo: "Oing",
+						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
+                        posicionImagen: "arriba", // derecha, izquierda, arriba, abajo
+                        // alto: 2,
+                        // ancho: 2,
+						texto: "Oing es el más fuerte."
 					},
 					{
 						titulo: "Sección 4",
-						imagen: "",
-						posicionImagen: "", // derecha, izquierda, arriba, abajo
+						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
+                        posicionImagen: "abajo", // derecha, izquierda, arriba, abajo
+                        // alto: 2,
+                        ancho: 60,
 						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
 					},
 					{
 						titulo: "Sección 5",
-						imagen: "",
-						posicionImagen: "", // derecha, izquierda, arriba, abajo
+						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
+                        posicionImagen: "derecha", // derecha, izquierda, arriba, abajo
+                        alto: "50%",
+                        // ancho: 2,
 						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
 					},
 				],
