--- a/09.html
+++ b/09.html
@@ -16,6 +16,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta content="" name="description" />
 		<meta content="" name="author" />
+        <link rel="stylesheet" href="assets/css/estilo_subitus.css">
 		<!-- end: META -->
 		<!-- start: GOOGLE FONTS -->
 		<link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
