Se agrega soporte para borderRadius en imagen

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 						titulo: "Bicha",
 						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
                         posicionImagen: "derecha", // derecha, izquierda, arriba, abajo
+                        bordeImagen: "15px",
                         // alto: 2,
                         // ancho: 2,
 						texto: "Este será el contenido 1 de bicha."
@@ -75,6 +76,7 @@
 						titulo: "Rino",
 						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
                         posicionImagen: "izquierda", // derecha, izquierda, arriba, abajo
+                        bordeImagen: "10px",
                         // alto: 2,
                         // ancho: 2,
 						texto: "Rino estuvo aquí."
